--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+authlib = "==1.3.1"
 flask = "==3.0.0"
 gunicorn = "==21.2.0"
 psycopg2-binary = "2.9.9"
