--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 authlib = "==1.3.1"
+dash_auth = "==2.3.0"
 flask = "==3.0.0"
 gunicorn = "==21.2.0"
 psycopg2-binary = "2.9.9"
