--- a/.github/workflows/cicd-deploy-to-prod.yml
+++ b/.github/workflows/cicd-deploy-to-prod.yml
@@ -79,6 +79,7 @@ jobs:
             --set app.deployment.env.AUTH0_DOMAIN=${AUTH0_DOMAIN} \
             --set app.deployment.env.AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID} \
             --set app.deployment.env.AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET} \
+            --set app.deployment.env.APP_SECRET_KEY=${APP_SECRET_KEY} \
             --set app.deployment.env.POSTGRES_USER=${POSTGRES_USER} \
             --set app.deployment.env.POSTGRES_PASSWORD=${POSTGRES_PASSWORD} \
             --set app.deployment.env.POSTGRES_DB=${POSTGRES_DB} \
