--- a/helm/kpi-dashboard/templates/deployment.yaml
+++ b/helm/kpi-dashboard/templates/deployment.yaml
@@ -20,6 +20,14 @@ spec:
           env:
             - name: API_KEY 
               value: {{ .Values.app.deployment.env.API_KEY | quote }}
+            - name: AUTH0_DOMAIN
+              value: {{ .Values.app.deployment.env.AUTH0_DOMAIN | quote}}
+            - name: AUTH0_CLIENT_ID
+              value: {{ .Values.app.deployment.env.AUTH0_CLIENT_ID | quote}}
+            - name: AUTH0_CLIENT_SECRET
+              value: {{ .Values.app.deployment.env.AUTH0_CLIENT_SECRET | quote}}
+            - name: APP_SECRET_KEY
+              value: {{ .Values.app.deployment.env.APP_SECRET_KEY | quote}}
             - name: POSTGRES_USER
               value: {{ .Values.app.deployment.env.POSTGRES_USER | quote }}
             - name: POSTGRES_PASSWORD
