--- a/.github/workflows/cicd-trivy-dependency-scan.yml
+++ b/.github/workflows/cicd-trivy-dependency-scan.yml
@@ -20,7 +20,7 @@ jobs:
           severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@af56b044b5d41c317aef5d19920b3183cb4fbbec # v3
         with:
           sarif_file: "trivy-results.sarif"
 
