--- a/.github/workflows/cicd-trivy-container-scan.yml
+++ b/.github/workflows/cicd-trivy-container-scan.yml
@@ -9,7 +9,7 @@ on:
     - cron: "0 6 * * 1" # At 06:00 on Monday.
 
 jobs:
-  CVE-scan:
+  CVE-scan-on-container:
     runs-on: ubuntu-latest
     environment: dev
     permissions:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Trivy scan
         id: scan
-        uses: aquasecurity/trivy-action@6e7b7d1fd3e4fef0c5fa8cce1229c54b2c9bd0d8 # v0.16.1
+        uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 #v0.28.0
         with:
           image-ref: "localbuild/testimage:latest"
           format: "sarif"
@@ -34,7 +34,7 @@ jobs:
           ACTIONS_RUNTIME_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@af56b044b5d41c317aef5d19920b3183cb4fbbec # v3
         with:
           sarif_file: "results.sarif"
 
@@ -47,6 +47,16 @@ jobs:
 
           echo $SCAN_RESULTS
 
+      - name: Create an Issue for Detected Vulnerabilities
+        id: issue-creator
+        if: env.CVE_HIGH > 0 || env.CVE_CRITICAL > 0
+        uses: JasonEtco/create-an-issue@1b14a70e4d8dc185e5cc76d3bec9eab20257b2c5 #v2.8.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          update_existing: false
+          filename: .github/ISSUE_TEMPLATE/trivy-vulnerability-template.md
+
       - name: Fails if CVE HIGH or CRITICAL are detected
         id: cve-threshold
         if: env.CVE_HIGH > 0 || env.CVE_CRITICAL > 0
@@ -54,7 +64,7 @@ jobs:
 
       - name: Send notification to Slack
         id: slack
-        if: always() && github.event_name == 'schedule' && steps.cve-threshold.outcome == 'failure'
+        if: always() && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && steps.cve-threshold.outcome == 'failure'
         uses: slackapi/slack-github-action@e28cf165c92ffef168d23c5c9000cffc8a25e117 #v1.24.0
         with:
           payload: |
@@ -64,18 +74,46 @@ jobs:
                   "type": "header",
                   "text": {
                     "type": "plain_text",
-                    "text": "[ ${{ github.event.repository.name }} ]"
+                    "text": "Vulnerability Scan Report: ${{ github.event.repository.name }}"
                   }
                 },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": " `CRITICAL` : *${{ env.CVE_CRITICAL }}*\n\n`HIGH` : *${{ env.CVE_HIGH }}*\n\n`MEDIUM` : *${{ env.CVE_MEDIUM }}*\n\n<https://github.com/${{ github.repository }}/security/code-scanning |See details on GitHub>"
+                    "text": "*Scan Summary:*"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*CRITICAL:* :rotating_light: ${{ env.CVE_CRITICAL }}"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*HIGH:* :warning: ${{ env.CVE_HIGH }}"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*MEDIUM:* :yellow_heart: ${{ env.CVE_MEDIUM }}"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "Please review the detailed scan results and take necessary actions.\n\n<https://github.com/${{ github.repository }}/security/code-scanning|View Details on GitHub>\n\n<https://runbooks.operations-engineering.service.justice.gov.uk/documentation/internal/dependency-alerts.html|Runbook for Responding to Dependency Alerts>\n\n*Issue Created:* <${{ steps.issue-creator.outputs.url }}|View Issue>"
                   }
                 }
               ]
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.CVE_SCAN_SLACK_WEBHOOK }} # You will need to populate this value from the slack applications window.
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
