--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,11 @@ plotly = "==5.21.0"
 dash = "==2.16.1"
 pandas = "==2.2.2"
 statsmodels = "==0.14.1"
+pygithub = "==2.5.0"
+gql = "==3.5.0"
+aiohttp = "==3.11.10"
 
 [requires]
 python_version = "3.12"
+
+[dev-packages]
