--- a/Pipfile
+++ b/Pipfile
@@ -7,12 +7,14 @@ name = "pypi"
 authlib = "==1.3.1"
 dash_auth = "==2.3.0"
 flask = "==3.0.0"
-gunicorn = "==21.2.0"
 psycopg2-binary = "2.9.9"
 plotly = "==5.21.0"
 dash = "==2.16.1"
 pandas = "==2.2.2"
 statsmodels = "==0.14.1"
+gunicorn = "==23.0.0"
 
 [requires]
 python_version = "3.12"
+
+[dev-packages]
