--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ pygithub = "==2.5.0"
 gql = "==3.5.0"
 aiohttp = "==3.11.10"
 gunicorn = "==23.0.0"
+pytest = "==8.3.4"
+pytest-mock = "==3.14.0"
 
 [requires]
 python_version = "3.12"
