--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,11 @@ pygithub = "==2.5.0"
 gql = "==3.5.0"
 aiohttp = "==3.11.10"
 gunicorn = "==23.0.0"
-pytest = "==8.3.4"
-pytest-mock = "==3.14.0"
 
 [requires]
 python_version = "3.12"
 
 [dev-packages]
+pytest = "==8.3.4"
+pytest-mock = "==3.14.0"
+coverage = "==7.6.10"
