--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Install Pipenv  
         run: |
           pip3 install --user pipenv
-          pipenv install
+          pipenv install --dev
       - name: Run Unit Tests 
         run: pipenv run coverage run -m pytest fetcher/tests/ -v
