worker threads logs appear immediately

--- a/.github/workflows/fetch_gha_cost_per_repository.yml
+++ b/.github/workflows/fetch_gha_cost_per_repository.yml
@@ -2,6 +2,8 @@ name: 💰 Fetch GHA Cost Per Repository
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches: ["main"]
 
 jobs:
   fetch-gha-minutes:
