--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ gql = "==3.5.0"
 aiohttp = "==3.11.10"
 gunicorn = "==23.0.0"
 jinja2 = "==3.1.6"
+setuptools = "==80.7.1"
 
 [requires]
 python_version = "3.12"
