--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ aiohttp = "==3.11.10"
 gunicorn = "==23.0.0"
 jinja2 = "==3.1.6"
 setuptools = "==80.7.1"
+cryptography = "==45.0.2"
 
 [requires]
 python_version = "3.12"
